Add header button

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
             <header id="header-list">
-
-
+                    <button class="AddT"> Add Task</button>
+                    <button class="AddS"> Add Section</button>
             </header>
 
 
