add style mark list

--- a/index.html
+++ b/index.html
@@ -22,13 +22,51 @@
 
 
             <header id="header-list">
-                    <button class="AddT"> Add Task</button>
-                    <button class="AddS"> Add Section</button>
+                    <button class="button Task"> Add Task</button>
+                    <button class="button Section"> Add Section</button>
             </header>
 
 
             <!-- /#header-list -->
             <main id="main-list">
+                <ul>
+                    <li>
+                        <span class="HeadList">New Task</span>
+                        <ul>
+                            <li>
+                                Quartely Newsletter <span class="notification Editorial">Editorial</span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="HeadList">Today</span>
+                        <ul>
+                            <li>Recruitin blog post<span class="notification Editorial">Editorial</span>
+                            </li>
+                            <li>Mobile app launch<span class="notification Q1Goals">Q1 Goals</span>
+                            </li>
+                            <li>Interview Jhon H.<span class="notification Recruiting">Recruiting</span>
+                            </li>
+                            <li>Summit update to mobile storefronts<span class="notification Mobile">Mobile</span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="HeadList">Upcoming</span>
+                        <ul>
+                            <li>Schedule meeting with Alex
+                            </li>
+                            <li>Home page refresh<span class="notification Website">Website</span>
+                            </li>
+                            <li>Onboard new Sales team members<span class="notification Sales">Sales</span>
+                            </li>
+                            <li>Review editorial calenda<span class="notification Editorial">Editorial</span>
+                            </li>
+                        </ul>
+                    </li>
+
+
+                </ul>
 
 
             </main>
