review all exercise

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <header id="app_header">
-        <img id="logo Title" src="./img/Logo.png" alt="Logo_Boolean">
-        <h1 id="Title">Toboolist</h1>
+        <div class="LogoTitle">
+            <img id="logo" src="./img/Logo.png" alt="Logo_Boolean">
+            <span id="Title">Toboolist</span>
+        </div>
 
 
 
@@ -30,38 +32,63 @@
 
             <!-- /#header-list -->
             <main id="main-list">
-                <ul>
+                <ul class="menu">
                     <li>
-                        <span class="HeadList">New Task</span>
+                        <h3 class="HeadList"><span>&#11206</span> New Task</h3>
                         <ul>
                             <li>
-                                Quartely Newsletter <span class="notification Editorial">Editorial</span>
+                                <span class="icon check">&check;</span>
+                                <span>Quartely Newsletter</span>
+                                 <span class="notification Editorial">Editorial</span>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <span class="HeadList">Today</span>
+                        <h3 class="HeadList"> <span>&#11206</span> Today</h3>
                         <ul>
-                            <li>Recruitin blog post<span class="notification Editorial">Editorial</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Recruitin blog post</span>
+                                <span class="notification Editorial">Editorial</span>
                             </li>
-                            <li>Mobile app launch<span class="notification Q1Goals">Q1 Goals</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Mobile app launch</span>
+                                <span class="notification Q1Goals">Q1 Goals</span>
                             </li>
-                            <li>Interview Jhon H.<span class="notification Recruiting">Recruiting</span>
+                            <li>
+                                <span class="icon cross">&cross;</span>
+                                <span>Interview Jhon H.</span>
+                                <span class="notification Recruiting">Recruiting</span>
                             </li>
-                            <li>Summit update to mobile storefronts<span class="notification Mobile">Mobile</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Summit update to mobile storefronts</span>
+                                <span class="notification Mobile">Mobile</span>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <span class="HeadList">Upcoming</span>
+                        <span class="HeadList"><span>&#11206</span> Upcoming</span>
                         <ul>
-                            <li>Schedule meeting with Alex
+                            <li>
+                                <span class="icon cross">&cross;</span>
+                                <span>Schedule meeting with Alex</span>
                             </li>
-                            <li>Home page refresh<span class="notification Website">Website</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Home page refresh</span>
+                                <span class="notification Website">Website</span>
                             </li>
-                            <li>Onboard new Sales team members<span class="notification Sales">Sales</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Onboard new Sales team members</span>
+                                <span class="notification Sales">Sales</span>
                             </li>
-                            <li>Review editorial calenda<span class="notification Editorial">Editorial</span>
+                            <li>
+                                <span class="icon check">&check;</span>
+                                <span>Review editorial calenda</span>
+                                <span class="notification Editorial">Editorial</span>
                             </li>
                         </ul>
                     </li>
@@ -72,6 +99,8 @@
 
             </main>
             <!-- /#main-list -->
+
+
 
 
 
